force-app/main/default/objects/Opportunity/fields/Competitive_Win_Against__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Win_Against__c</fullName>
    <label>Competitive Win Against</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anaplan</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Beqom</fullName>
            </value>
            <value>
                <fullName>Callidus</fullName>
            </value>
            <value>
                <fullName>CloudComp</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Glocent</fullName>
            </value>
            <value>
                <fullName>Iconixx</fullName>
            </value>
            <value>
                <fullName>Internal Build</fullName>
            </value>
            <value>
                <fullName>Merced</fullName>
            </value>
            <value>
                <fullName>NetCommissions</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Nirvaha</fullName>
            </value>
            <value>
                <fullName>Not Competitive (i.e. No decision)</fullName>
            </value>
            <value>
                <fullName>Oracle Fusion</fullName>
            </value>
            <value>
                <fullName>Oracle OIC</fullName>
            </value>
            <value>
                <fullName>QCommission</fullName>
            </value>
            <value>
                <fullName>SalesReach</fullName>
            </value>
            <value>
                <fullName>Surgesoft</fullName>
            </value>
            <value>
                <fullName>Synygy</fullName>
            </value>
            <value>
                <fullName>Varicent</fullName>
            </value>
            <value>
                <fullName>Vistex</fullName>
            </value>
            <value>
                <fullName>Core Commissions</fullName>
            </value>
            <value>
                <fullName>Performio</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>SAP ICM</fullName>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
            <value>
                <fullName>Xtiva</fullName>
            </value>
            <value>
                <fullName>Success Factors</fullName>
            </value>
            <value>
                <fullName>Obero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>