force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HIDE - Opportunities</relationshipLabel>
    <relationshipName>Hide_OpportunitiesQS</relationshipName>
    <type>Lookup</type>
</CustomField>