force-app/main/default/objects/Opportunity/fields/Converted_From_a_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_From_a_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked by SFDC if the Opportunity was converted from a Lead</description>
    <label>Converted From a Lead</label>
    <type>Checkbox</type>
</CustomField>