force-app/main/default/objects/Opportunity/fields/Cost_of_Inaction__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Inaction__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan.</description>
    <inlineHelpText>Have I surfaced the costs of inaction with the buyer and are those costs compelling?</inlineHelpText>
    <label>Value Map: Cost of Inaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - We&apos;ve documented the COI qualitatively</fullName>
            </value>
            <value>
                <fullName>3 - We&apos;ve documented the COI quantitatively</fullName>
            </value>
            <value>
                <fullName>0 - The COI is inadequate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>