force-app/main/default/objects/Opportunity/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.CPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPI %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>