force-app/main/default/objects/Opportunity/fields/Create_Clarizen_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Clarizen_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Clarizen (Planview) integration</description>
    <label>Create Clarizen Project</label>
    <type>Checkbox</type>
</CustomField>