force-app/main/default/objects/Opportunity/fields/Credit_Add__c.field-meta.xml
<CustomField>
    <fullName>Credit_Add__c</fullName>
    <label>ARR Credit Add</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>