force-app/main/default/objects/Opportunity/fields/Credit_Subtract__c.field-meta.xml
<CustomField>
    <fullName>Credit_Subtract__c</fullName>
    <label>ARR Credit Subtract</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>