force-app/main/default/objects/Opportunity/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <inlineHelpText>We understand their complete current situation. We can sketch it out with 100% accuracy with many real examples.</inlineHelpText>
    <label>Current Situation</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>