force-app/main/default/objects/Opportunity/fields/Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution__c</fullName>
    <label>Current Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access DB</fullName>
            </value>
            <value>
                <fullName>Callidus – Hosted</fullName>
            </value>
            <value>
                <fullName>Callidus – on-premise</fullName>
            </value>
            <value>
                <fullName>CATS by Centsoft</fullName>
            </value>
            <value>
                <fullName>Centive – Hosted</fullName>
            </value>
            <value>
                <fullName>Centive – on premise</fullName>
            </value>
            <value>
                <fullName>CloudComp</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Glocent</fullName>
            </value>
            <value>
                <fullName>NetCommissions</fullName>
            </value>
            <value>
                <fullName>NICE</fullName>
            </value>
            <value>
                <fullName>Optymyze</fullName>
            </value>
            <value>
                <fullName>Oracle OIC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performio</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
            <value>
                <fullName>Success Factors</fullName>
            </value>
            <value>
                <fullName>Synygy</fullName>
            </value>
            <value>
                <fullName>Vericent</fullName>
            </value>
            <value>
                <fullName>Xactly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>