force-app/main/default/objects/Opportunity/fields/Current_SPM_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_SPM_Process__c</fullName>
    <label>Current SPM Process</label>
    <type>TextArea</type>
</CustomField>