force-app/main/default/objects/Opportunity/fields/Customer_s_Executive_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Executive_Priorities__c</fullName>
    <description>For VVSS</description>
    <inlineHelpText>From the customer CEO perspective, what are the most important priorities? 
Which one could your offering most impact?</inlineHelpText>
    <label>Buyer&apos;s Executive Priorities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>