force-app/main/default/objects/Opportunity/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if customer survey completed</inlineHelpText>
    <label>Cust Survey Completed</label>
    <type>Checkbox</type>
</CustomField>