force-app/main/default/objects/Opportunity/fields/CustomerSalesforceID__c.field-meta.xml
<CustomField>
    <fullName>CustomerSalesforceID__c</fullName>
    <label>Customer Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>