force-app/main/default/objects/Opportunity/fields/Data_Prepardness__c.field-meta.xml
<CustomField>
    <fullName>Data_Prepardness__c</fullName>
    <description>SC populated field to detail what data was received from the prospect</description>
    <label>Data Received by SC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Transaction Data</fullName>
            </value>
            <value>
                <fullName>Sample Statements</fullName>
            </value>
            <value>
                <fullName>Sample Reports</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Hi Level Req Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>