force-app/main/default/objects/Opportunity/fields/Days_Between_Creation_and_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Creation_and_Campaign_Touch__c</fullName>
    <formula>Legacy_Created_Date__c - Primary_Campaign_Member_Date__c</formula>
    <label>Days Between Creation and Campaign Touch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>