force-app/main/default/objects/Opportunity/fields/Deal_Products__c.field-meta.xml
<CustomField>
    <fullName>Deal_Products__c</fullName>
    <description>Please Indicate the Products you&apos;re planning on selling on this deal</description>
    <inlineHelpText>Please Indicate the Products you&apos;re planning on selling on this deal</inlineHelpText>
    <label>Deal Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incent</fullName>
            </value>
            <value>
                <fullName>Xactly Forecasting</fullName>
            </value>
            <value>
                <fullName>AlignStar</fullName>
            </value>
            <value>
                <fullName>Advanced Quota Planning</fullName>
            </value>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>CEA</fullName>
            </value>
            <value>
                <fullName>CEF</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Sales Planning</fullName>
            </value>
            <value>
                <fullName>SimplyComp</fullName>
            </value>
            <value>
                <fullName>Show Me</fullName>
            </value>
            <value>
                <fullName>Strategic Services</fullName>
            </value>
            <value>
                <fullName>Objectives</fullName>
            </value>
            <value>
                <fullName>Obero</fullName>
            </value>
            <value>
                <fullName>Technical Account Manager</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>Enabling Offers</fullName>
            </value>
            <value>
                <fullName>Sales Analytics</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Inspire</fullName>
            </value>
            <value>
                <fullName>Views</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>OSM</fullName>
            </value>
            <value>
                <fullName>Xactly Framework</fullName>
            </value>
            <value>
                <fullName>CRM Accelerator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>