force-app/main/default/objects/Opportunity/fields/Deal_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Deal_Solutions__c</fullName>
    <label>Deal Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
            <value>
                <fullName>Strategic Sales Planning</fullName>
            </value>
            <value>
                <fullName>Operational Sales Management</fullName>
            </value>
            <value>
                <fullName>Incentive Compensation Management</fullName>
            </value>
            <value>
                <fullName>Sales Performance Analytics</fullName>
            </value>
            <value>
                <fullName>Retail Target Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>