force-app/main/default/objects/Opportunity/fields/Deal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Deal_Strategy__c</fullName>
    <description>For VVSS</description>
    <inlineHelpText>Formulate a sales strategy that makes Your Differentiator the primary buying criteria of the Catalyst</inlineHelpText>
    <label>Deal Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>