force-app/main/default/objects/Opportunity/fields/Decision_Maker_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Engagement__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan.</description>
    <inlineHelpText>Have I successfully identified and engaged everyone who gets a vote—either “yes” or “no” (i.e., Procurement, Finance, IT, Legal)?</inlineHelpText>
    <label>Power Map: Decision Maker Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I know who all of the Decision Makers are</fullName>
            </value>
            <value>
                <fullName>3 - I know who all of the Decision Makers are and they&apos;re supporters</fullName>
            </value>
            <value>
                <fullName>0 - Inadequate Decision Maker support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>