force-app/main/default/objects/Opportunity/fields/Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decommission_Reason__c</fullName>
    <label>Decommission Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Turn-Over/Lack of Follow-Up</fullName>
            </value>
            <value>
                <fullName>Associated or Consolidating with Competitor</fullName>
            </value>
            <value>
                <fullName>Bankruptcy or Acquisition</fullName>
            </value>
            <value>
                <fullName>Client Non-Responsiveness</fullName>
            </value>
            <value>
                <fullName>Client Personnel Change</fullName>
            </value>
            <value>
                <fullName>Contract Challenges</fullName>
            </value>
            <value>
                <fullName>Customer Service &amp; Support</fullName>
            </value>
            <value>
                <fullName>Feature Deficiency/Functionality</fullName>
            </value>
            <value>
                <fullName>Implementation or Migration Time &amp; Cost</fullName>
            </value>
            <value>
                <fullName>Internal Business Reasons</fullName>
            </value>
            <value>
                <fullName>Legacy Product/Version Issues</fullName>
            </value>
            <value>
                <fullName>Low or Non-Usage</fullName>
            </value>
            <value>
                <fullName>Migrated to Another Product Line</fullName>
            </value>
            <value>
                <fullName>Older Version/Cost of Ownership or Upgrade</fullName>
            </value>
            <value>
                <fullName>Partner/Third-Party Issue</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product No Longer Supported</fullName>
            </value>
            <value>
                <fullName>Reduction of Users</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Competitive Loss</fullName>
                <isActive>false</isActive>
                <label>Competitive Loss</label>
            </value>
            <value>
                <fullName>Cost Benefit</fullName>
                <isActive>false</isActive>
                <label>Cost Benefit</label>
            </value>
            <value>
                <fullName>Discount (used for discounts mid-contract or at time of renewal)</fullName>
                <isActive>false</isActive>
                <label>Discount (used for discounts mid-contract or at time of renewal)</label>
            </value>
            <value>
                <fullName>Downgrade (used for downgrades mid-contract or at time of renewal)</fullName>
                <isActive>false</isActive>
                <label>Downgrade (used for downgrades mid-contract or at time of renewal)</label>
            </value>
            <value>
                <fullName>Implementation Issues</fullName>
                <isActive>false</isActive>
                <label>Implementation Issues</label>
            </value>
            <value>
                <fullName>Merger/Acquisition</fullName>
                <isActive>false</isActive>
                <label>Merger/Acquisition</label>
            </value>
            <value>
                <fullName>Non-Payment (Used when we writeoff and churn due to non-payment)</fullName>
                <isActive>false</isActive>
                <label>Non-Payment (Used when we writeoff and churn due to non-payment)</label>
            </value>
            <value>
                <fullName>Out of Business</fullName>
                <isActive>false</isActive>
                <label>Out of Business</label>
            </value>
            <value>
                <fullName>Product</fullName>
                <isActive>false</isActive>
                <label>Product</label>
            </value>
            <value>
                <fullName>Resources</fullName>
                <isActive>false</isActive>
                <label>Resources</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>