force-app/main/default/objects/Opportunity/fields/Delta_Request__c.field-meta.xml
<CustomField>
    <fullName>Delta_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers the Create a Delta SOW Request process builder</description>
    <label>Delta Request</label>
    <type>Checkbox</type>
</CustomField>