force-app/main/default/objects/Opportunity/fields/Demo_1__c.field-meta.xml
<CustomField>
    <fullName>Demo_1__c</fullName>
    <label>Upcoming Demo Date</label>
    <type>Date</type>
</CustomField>