force-app/main/default/objects/Opportunity/fields/Demo_Quality__c.field-meta.xml
<CustomField>
    <fullName>Demo_Quality__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Have all key buyers confirmed they received a valuable demo tailored to their needs?</inlineHelpText>
    <label>Purchase Process: Demo Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;m starting to set up the demo(s)</fullName>
            </value>
            <value>
                <fullName>2 - We have delivered some demos but not all</fullName>
            </value>
            <value>
                <fullName>3 - The customer has confirmed that our demos were highly valuable</fullName>
            </value>
            <value>
                <fullName>0 - No/Poor demo execution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>