force-app/main/default/objects/Opportunity/fields/Docebo_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Docebo_Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated via process builder</description>
    <label>Docebo Course Enrollment</label>
    <referenceTo>docebo_v3__CourseEnrollment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>