force-app/main/default/objects/Opportunity/fields/Docebo_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Docebo_Discount_Code__c</fullName>
    <description>Used by IT Integrations - Discount / coupon code for training deals from Docebo</description>
    <label>Docebo Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>