force-app/main/default/objects/Opportunity/fields/Docebo_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Docebo_Transaction_ID__c</fullName>
    <description>Used by IT Integrations - Unique ID for Docebo Transactions</description>
    <externalId>true</externalId>
    <label>Docebo Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>