force-app/main/default/objects/Opportunity/fields/DSA_Completed__c.field-meta.xml
<CustomField>
    <fullName>DSA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for VVS (Vista Value Selling) Closing Plan.</description>
    <label>DSA Completed</label>
    <type>Checkbox</type>
</CustomField>