force-app/main/default/objects/Opportunity/fields/DSCORGPKG__Attributed_to_DiscoverOrg__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Attributed_to_DiscoverOrg__c</fullName>
    <formula>Account.DSCORGPKG__DiscoverOrg_First_Update__c  &lt;  CreatedDate</formula>
    <label>Attributed to DiscoverOrg</label>
    <type>Checkbox</type>
</CustomField>