force-app/main/default/objects/Opportunity/fields/DuplicateOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DuplicateOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Opportunity</label>
    <type>Checkbox</type>
</CustomField>