force-app/main/default/objects/Opportunity/fields/Education_Amount__c.field-meta.xml
<CustomField>
    <fullName>Education_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Education Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>