force-app/main/default/objects/Opportunity/fields/ELA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ELA_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ELA Opportunity</label>
    <type>Checkbox</type>
</CustomField>