force-app/main/default/objects/Opportunity/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>