force-app/main/default/objects/Opportunity/fields/Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsor__c</fullName>
    <inlineHelpText>The Xactly Exec Sponsor will be listed here if applicable. Exec sponsors will be assigned by the Exec team.</inlineHelpText>
    <label>Xactly Exec Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>