force-app/main/default/objects/Opportunity/fields/Executed_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Sign_Date__c</fullName>
    <description>Contract Signed Date</description>
    <inlineHelpText>Contract Signed Date</inlineHelpText>
    <label>Executed Sign Date</label>
    <type>Date</type>
</CustomField>