force-app/main/default/objects/Opportunity/fields/Finance_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Comments__c</fullName>
    <label>Finance Approval Comments</label>
    <type>TextArea</type>
</CustomField>