force-app/main/default/objects/Opportunity/fields/Finance_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_Date__c</fullName>
    <label>Finance Approved Date</label>
    <type>Date</type>
</CustomField>