force-app/main/default/objects/Opportunity/fields/Finance_Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Finance_Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>