force-app/main/default/objects/Opportunity/fields/Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status__c</fullName>
    <label>Finance Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>