force-app/main/default/objects/Opportunity/fields/First_Year_ARR_Without_OTD__c.field-meta.xml
<CustomField>
    <fullName>First_Year_ARR_Without_OTD__c</fullName>
    <label>First Year ARR Without OTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>