force-app/main/default/objects/Opportunity/fields/First_Year_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Price_Increase__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.First_Year_Price_Increase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Price Increase (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>