force-app/main/default/objects/Opportunity/fields/First_Year_TCV__c.field-meta.xml
<CustomField>
    <fullName>First_Year_TCV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>First Year TCV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>