force-app/main/default/objects/Opportunity/fields/Forecasted_Bookings_for_Finance__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Bookings_for_Finance__c</fullName>
    <description>Used for Finances Forecast conversion reporting</description>
    <formula>IF( Bookings_Amount__c/ CURRENCYRATE( text(CurrencyIsoCode) ) &gt; 1000000,1000000 * CURRENCYRATE(text(CurrencyIsoCode)),Bookings_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Bookings for Finance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>