force-app/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Do I know where the budget is coming from and have the budget owners agreed to funding?</inlineHelpText>
    <label>Purchase Process: Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I understand where the budget is coming from</fullName>
            </value>
            <value>
                <fullName>3 - Budget has been confirmed</fullName>
            </value>
            <value>
                <fullName>0 - Cannot secure budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>