force-app/main/default/objects/Opportunity/fields/Give_Get__c.field-meta.xml
<CustomField>
    <fullName>Give_Get__c</fullName>
    <inlineHelpText>We have identified numerous items of value that we can give away instead of lowering the price. If we have to discount at all, we have identified numerous items of value to us that we want in order to discount the price in any way.</inlineHelpText>
    <label>Give/Get</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>