force-app/main/default/objects/Opportunity/fields/Greatest_threat_to_this_deal__c.field-meta.xml
<CustomField>
    <fullName>Greatest_threat_to_this_deal__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <label>Greatest threat to this deal?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>