force-app/main/default/objects/Opportunity/fields/Handover_Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Call_Completed_Date__c</fullName>
    <inlineHelpText>Date that the handover call between SDR, AE and prospect occurred</inlineHelpText>
    <label>Handover Call Completed Date</label>
    <type>Date</type>
</CustomField>