force-app/main/default/objects/Opportunity/fields/Has_ClosePlan__c.field-meta.xml
<CustomField>
    <fullName>Has_ClosePlan__c</fullName>
    <formula>TSPC__CPDealCount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows a checkbox if there is a count of &gt; 0 i.e. there is a closeplan against the opp</inlineHelpText>
    <label>Has ClosePlan</label>
    <type>Checkbox</type>
</CustomField>